<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/poppins_400"
        android:gravity="start"
        android:text="@string/something_went_wrong"
        android:textColor="@color/colorTextDark"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/colorGrayLight" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/poppins_400"
        android:gravity="start"
        android:text="@string/default_error"
        android:textColor="@color/colorTextDark"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_weight="1"
        android:background="@drawable/rounded_red_bg"
        android:fontFamily="@font/poppins_500"
        android:gravity="center"
        android:orientation="horizontal"
        android:stateListAnimator="@null"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

</LinearLayout>
