<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".ui.component.addproduct.AddProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/custom_toolbar" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/main_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rounded_gray"
                    android:fontFamily="@font/poppins_400"
                    android:gravity="center_vertical"
                    android:hint="@string/product_name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorTextLight"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/product_name_required_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/this_field_is_required"
                    android:textColor="@color/colorRed"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_gray"
                    android:fontFamily="@font/poppins_400"
                    android:gravity="center_vertical"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorTextLight"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/product_price_required_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/this_field_is_required"
                    android:textColor="@color/colorRed"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/product_tax"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_gray"
                    android:fontFamily="@font/poppins_400"
                    android:gravity="center_vertical"
                    android:hint="@string/product_tax"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorTextLight"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/product_tax_required_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/this_field_is_required"
                    android:textColor="@color/colorRed"
                    android:visibility="gone" />

                <AutoCompleteTextView
                    android:id="@+id/product_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/rounded_gray"
                    android:drawableEnd="@drawable/ic_down_arrow"
                    android:fontFamily="@font/poppins_400"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorTextLight"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/product_type_required_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/this_field_is_required"
                    android:textColor="@color/colorRed"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/add_product_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/rounded_red_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="@string/add_product"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loader_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimary" />

    </RelativeLayout>

</RelativeLayout>